		Additionally passes "RequestedVariant", "RequestedSubType" and "RNG".
		A third bool argument can be included in the return table to specify wether or not you want to let the callback continue execution after the update to Variant and SubType.
* "Hush AI Fixes" patch will no longer be applied during daily runs.
* Deal rooms with variants above 99 will now also generate in Red Rooms
/newline/
Fixes:
	- Fixed a vanilla bug that caused wisps from destroyed Mystery Gift/Eden's Soul wisps to spawn even after a run restart.
	- Fixed HUD:GetCoopMenuSprite() returning invalid data
	- Fixed EntityPlayer:AddActiveCharge() incorrectly allowing overcharge when adding charge to all slots at the same time (with -1 given as the slot)
/newline/
v1.0.11c -
Additions:
* CharacterMenu:
	- [Get/Set]ActiveStatus()
	- CharacterMenuStatus enum
/newline/
Fixes:
	- Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
	- Fixed SetRail index checks
/newline/
v1.0.11b -
Bug fixes:
	- Fixed a crash that could occur randomly when using custom item pools
/newline/
v1.0.11a -
Bug fixes:
	- Fixed a division by zero that occured when shuffling an empty item pool
/newline/
v1.0.11 -
Additions:
* Itempools:
	- Added support for new custom itempools through itempools.xml on the content folder
	- Isaac.GetPoolIdByName(poolName) - returns the id of a given custom pool. Returns -1 if the pool is not found.
	- Room:SetItemPool(ItemPoolType PoolType) - Sets the pool to use when the game needs to generate random collectibles in the current room.
	- Room:GetItemPool(int Seed, boolean Raw) - Retrieves the pooltype the game would use to generate random collectibles in the current room.
	- ItemPool:GetNumItemPools() - Retrieves the total number of itempools in the game, including custom itempools.
* GenericPrompt:
	- GenericPrompt constructor
	- Initialize(boolean SmallPrompt = false)
	- Show()
	- IsActive()
	- Update(boolean ProcessInput)
	- Render()